refactor a lot of stuff to fit the moveOne function
Refactor patchfields for testing, refactor agent/core to properly fit the models agents, added specific amenities for the model's interaction